--- a/try.html
+++ b/try.html
@@ -306,6 +306,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
   </tr>
+  <tr><th> GitHub stars: </th>
+  <td><img src='/github/stars/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
+  </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>https://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
